data/collection/fixes/descriptions/scala/scala-9451
```scala
Welcome to Scala version 2.11.7 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_45).
Type in expressions to have them evaluated.
Type :help for more information.

scala> implicit def impl[I[_]]:{type F[X] = { type Self = I[X] }} = new {type F[X] = { type Self = I[X] }}
warning: there was one feature warning; re-run with -feature for details
impl: [I[_]]=> AnyRef{type F[X] = AnyRef{type Self = I[X]}}

scala> implicitly[{type F[X] = { type Self = Iterable[X] }}]
<console>:12: error: could not find implicit value for parameter e: AnyRef{type F[X] = AnyRef{type Self = Iterable[X]}}
       implicitly[{type F[X] = { type Self = Iterable[X] }}]
                 ^

```